# anac-explorator

./: .gitignore  README.md  architecture-reference.html  architecture-summary.md  cli-implementation-plan.md  cli-specification.md  progress.md  pyproject.toml  specification.md
dictionaries/: cig_2025_01.dictionary.json  cig_2025_01.dictionary.md
research/: ANAC-data-research.md  ANAC-data.md
schemas/: bandi-cig-modalita-realizzazione.schema.json  bandi-cig-tipo-scelta-contraente.schema.json  categorie-dpcm-aggregazione.schema.json  categorie-opera.schema.json  cig_2007_01.schema.json  cig_2007_01_vs_cig_2025_01.comparison.json  cig_2025_01.schema.json  smartcig-tipo-fattispecie-contrattuale.schema.json
src/anac_explorator/: __init__.py  __main__.py  browser.py  catalog.py  ckan.py  cleaner.py  cli.py  comparison.py  config.py  dictionary.py  (+15 more)
tests/: test_catalog.py  test_ckan.py  test_cleaner.py  test_cli.py  test_comparison.py  test_config.py  test_dictionary.py  test_download_execution.py  test_download_planning.py  test_drop.py  test_errors.py  test_integrity.py  test_loader.py  test_metadata_views.py  test_output.py  test_parsing.py  test_paths.py  test_pipeline_integration.py  test_query_backend.py  test_sample.py  test_schema.py  test_schema_service.py  test_selection.py  test_stats.py  test_update_execution.py  test_update_planning.py  test_vocabulary.py
vocabularies/: bandi-cig-modalita-realizzazione.json  bandi-cig-tipo-scelta-contraente.json  categorie-dpcm-aggregazione.json  categorie-opera.json  index.json  smartcig-tipo-fattispecie-contrattuale.json
